<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/farmer_registration"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/highligt"/>


        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_dob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/dob"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/address"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/contact"
                android:inputType="number"
                android:textColor="@color/Hint_color" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/email"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_adhar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_adhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/enter_aadhar_no"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_pan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_pan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/pan"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_account"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:hint="@string/enter_account_no"
                android:textColor="@color/Hint_color" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_ifsc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_ifsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/ifsc"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_branch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/branch"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

        android:id="@+id/Text_Layout_bank_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/input_edit_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/bank_name"
            android:textColor="@color/Hint_color"
            />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_lat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="Enter Lat"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_long"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="Enter Long"
                android:textColor="@color/Hint_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/Text_Layout_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/Hint_color"
                />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/colorPrimary"
            android:background="@color/Background"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_new_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Already_User"
            android:textColor="@color/colorPrimary"
            android:background="@color/Background"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</ScrollView>