<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="40dp"
    android:orientation="vertical"
    android:background="@color/White"
    tools:context="com.example.kishor.farmersbid.activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Spinner
            android:id="@+id/userType"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:entries="@array/User"></Spinner>



    <android.support.design.widget.TextInputLayout

        android:id="@+id/Text_Layout_Aadhar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/input_edit_Aadhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_aadhar_no"
            android:textColor="@color/Hint_color"
           />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/Text_Layout_Password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/input_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_password"

            android:textColor="@color/Hint_color" />

    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:background="@color/Background"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_new_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/New_User"
            android:textColor="@color/colorPrimary"
            android:background="@color/green"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textColor="@color/colorPrimary"
            android:background="@color/green" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
