<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ADD_producr"
            android:gravity="center"
            android:textSize="20sp"

            android:textColor="@color/highligt"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="158dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/product_cate"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/product_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/product_quntity"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/product_rate"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/product_grade"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/product_bid_price"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@color/Button"
                    android:text="@string/Cancel"
                    android:textColor="@color/colorPrimary" />


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"> android:id="@+id/edit_product_name"

            <Spinner
                android:id="@+id/spinner_pro_cat"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:entries="@array/Product_cat"></Spinner>

            <com.reginald.editspinner.EditSpinner

                android:id="@+id/edit_product_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="Select Product"
                android:textColorHint="@color/Greay"
                app:dropDownDrawable="@mipmap/ic_arrow_drop_down_black_24dp"
                app:dropDownDrawableSpacing="15dp"
                app:dropDownDrawableWidth="25dp"
                app:dropDownDrawableHeight="25dp"
                android:layout_marginStart="20dp"
                android:background="@color/White"
                />

            <EditText
                android:id="@+id/product_quntity"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/White"
                android:inputType="text" />

            <EditText
                android:id="@+id/product_rate"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"

                android:background="@color/White"
                android:inputType="text" />

            <Spinner
                android:id="@+id/spinner_pro_grade"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:entries="@array/grade"></Spinner>
            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/White"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Create_Bid"
                android:textColor="@color/colorPrimary"
                android:background="@color/Button"
                android:layout_marginStart="15dp"
                android:layout_marginTop="40dp"/>

        </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>